Updated university name to Kenyatta University

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="about" class="container my-5">
         <h2>About Me</h2>
         <p>
-            Hello! I am an architect with a passion for creating functional and aesthetic spaces that blend seamlessly with their surroundings. With a background in both design and project management, I bring a unique perspective to every project I undertake. I graduated from Chuka University, where I honed my skills in architectural design and sustainable building practices.
+            Hello! I am an architect with a passion for creating functional and aesthetic spaces that blend seamlessly with their surroundings. With a background in both design and project management, I bring a unique perspective to every project I undertake. I graduated from Kenyatta University, where I honed my skills in architectural design and sustainable building practices.
             <br>
             My career has been dedicated to exploring innovative solutions and pushing the boundaries of architecture. Whether it's residential, commercial, or public projects, I am committed to delivering designs that not only meet but exceed client expectations.
         </p>
